# AutoNav

./: .gitignore  99-autonav.rules  CMakeLists.txt  LICENSE  README.md  autonav.Dockerfile  autonav_entrypoint.bash  docker-compose.yml  docker-compose_full.yml  install_udev_rules.sh  joystick.Dockerfile  package.xml  react.Dockerfile
.circleci/: config.yml
.github/workflows/: AutoNav_CI.yml  docker-image.yml  lint,yml  linter,yml  linter.yml
ReactApp/: README.md  nginx.conf  package-lock.json  package.json
ReactApp/public/: index.html
ReactApp/src/: App.js
ReactApp/src/components/: JoystickView.js  MapPosePage.js  MapView.js  MappingMap.js  MappingPage.js  NavigationPage.js  NextPage.js  RobotControl.js
ReactApp/src/components/css/: MapPosePage.css  MappingPage.css  NavigationPage.css  NextPage.css  RobotControl.css
WebServer/: .gitignore  index.py
WebServer/maps/: cafe.pgm  cafe.yaml  cafe_3d.pgm  cafe_3d.yaml  new_cafe.pgm  new_cafe.yaml
WebServer/models/: model.py
WebServer/mongodb/: db.py
WebServer/ros/: action.py  node.py  service.py  topics.py
WebServer/routes/: mapping.py  navigation.py  start.py
autonav_3d_mapping/: CMakeLists.txt  package.xml
autonav_3d_mapping/launch/: octomap_mapping.xml  rtabmapping.launch.py
autonav_3d_mapping/rviz/: octomap_rviz.rviz
autonav_bringup/: CMakeLists.txt  package.xml
autonav_bringup/launch/: autonav_bringup.launch.py  autonav_control.launch.py  view_rviz.launch.py  view_rviz_cartographer.launch.py  view_rviz_navigation.launch.py  view_rviz_slam.launch.py
autonav_controller/: CMakeLists.txt  package.xml
autonav_controller/autonav_controller/: cmd_vel_republisher.py  control.py  lidar_republisher.py  odom_logger.py  pid_controller.py  simple_controller.py  tune_pid.py  twiststamped.py
autonav_controller/config/: autonav_controllers.yaml  joystick.yaml
autonav_controller/launch/: autonav_bringup.launch.py  controller.launch.py  joystick.launch.py  joystick_teleop.launch.py
autonav_controller/src/: simple_controller.cpp
autonav_description/: CMakeLists.txt  package.xml
autonav_description/launch/: display.launch.py  gazebo.launch.py  robot_description.launch.py
autonav_description/meshes/: depth_camera_1.stl  imu_1.stl  left_wheel_1.stl  lidar_1.stl  right_wheel_1.stl
autonav_description/rviz/: display.rviz
autonav_description/urdf/: autonav.trans  autonav.xacro  autonav_gazebo.xacro  autonav_ros2_control.xacro  materials.xacro
autonav_firmware/: CMakeLists.txt  autonav_interface.xml  package.xml
autonav_firmware/firmware/esp32_serial/: esp32_serial.ino
autonav_firmware/firmware/esp32_uros/: esp32_uros.ino
autonav_firmware/firmware/esp32_uros_dualcore/: esp32_uros_dualcore.ino
autonav_firmware/firmware/esp32_uros_dualcore_2_0/: esp32_uros_dualcore_2_0.ino
autonav_firmware/include/autonav_firmware/: autonav_interface.hpp  autonav_interface_backup.hpp  autonav_interface_serial.hpp
autonav_firmware/launch/: autonav_bringup.launch.py
autonav_firmware/src/: autonav_interface.cpp  autonav_interface_backup.cpp  autonav_interface_serial.cpp
autonav_gazebo/: CMakeLists.txt  package.xml
autonav_gazebo/launch/: gazebo.launch.py
autonav_gazebo/worlds/: gazebo_world.world  newcafe.world
autonav_localization/: CMakeLists.txt  package.xml
autonav_localization/config/: ekf.yaml
autonav_localization/launch/: ekf.launch.py
autonav_navigation/: CMakeLists.txt  package.xml
autonav_navigation/config/: cartographer.lua  navigation.yaml  slam.yaml
autonav_navigation/launch/: cartographer.launch.py  navigation.launch.py  save_map.launch.py  slam.launch.py
autonav_navigation/maps/: L1012.pgm  L1012.yaml  L1012_test.pgm  L1012_test.yaml  gazebo_world.pgm  gazebo_world.yaml  world.pgm  world.yaml
autonav_navigation/rviz/: cartographer.rviz  navigation.rviz  slam.rviz
autonav_perception/: CMakeLists.txt  package.xml
autonav_perception/autonav_perception/: camera_publish.py  camera_subscribe.py
autonav_utils/: .gitignore  99-joystick.rules  install_udev_rules.sh  joystick_connect.sh  joystick_disconnect.sh  openvpn.ovpn
bno055/bno055/params/: bno055_params.yaml
config/: base_local_planner.yaml  common_costmap.yaml  dwa_planner.yaml  global_costmap.yaml  local_costmap.yaml  move_base.yaml
launch/: amcl.launch  autonav.launch  controller.launch  controller.yaml  display.launch  encoderticks.launch  gazebo.launch  hardware.launch  i2c.launch  laptop.launch  mapping.launch  move_base.launch  navigation.launch  robot.launch  trial.launch  x4.launch
maps/: L412.pgm  L412.yaml  house_map.pgm  house_map.yaml  myworldmap.pgm  myworldmap.yaml
meshes/: base_link.stl  lwheel_v1_1.stl  root.stl  rwheel_v1_1.stl  ydlidar_x4_v2_1.stl
rviz/: autonav.rviz  hardwarerviz.rviz  laserrviz.rviz  navigation.rviz  odomrviz.rviz
serial/: CMakeLists.txt
src/: i2c.py  left.py  left_cmdvel.py  leftwheelsub.py  odometrypub.py  right.py  right_cmdvel.py  rightwheelsub.py  transformbroadcast.py
src/Arduino_codes/: left.ino  right.ino
src/Arduino_codes/left/: left.ino
src/Arduino_codes/leftwheelpub/: leftwheelpub.ino
src/Arduino_codes/right/: right.ino
src/Arduino_codes/rightwheelpub/: rightwheelpub.ino
src/Arduino_codes/trial/: trial.ino
urdf/: autonav.gazebo  autonav.trans  autonav.xacro  materials.xacro
worlds/: myworld.world
ydlidar_ros2_driver/launch/: ydlidar_launch.py
ydlidar_ros2_driver/params/: X4.yaml
ydlidar_ros2_driver/src/: ydlidar_ros2_driver_node.cpp
